--- a/package.json
+++ b/package.json
@@ -9,17 +9,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/native-stack": "^6.9.8",
+    "axios": "^1.2.2",
+    "deepmerge": "^4.2.2",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "jotai": "^1.13.1",
+    "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-dotenv": "^3.4.7",
+    "react-native-paper": "^5.1.3",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.6.3"
   },
   "private": true
