--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "upgrade:unmanaged": "npm-check-updates -u && npm i expo-cli eas-cli -g -D && expo-cli upgrade && expo-cli doctor --fix-dependencies"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
-    "axios": "^1.2.2",
+    "axios": "^1.2.3",
     "deepmerge": "^4.2.2",
-    "expo": "~47.0.12",
+    "expo": "~47.0.13",
     "expo-status-bar": "~1.4.2",
     "jotai": "^1.13.1",
     "nativewind": "^2.0.11",
@@ -23,13 +24,14 @@
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.7",
     "react-native-paper": "^5.1.3",
-    "react-native-safe-area-context": "^4.4.1",
+    "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.9"
+    "react-native-web": "~0.18.7",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
+    "@babel/core": "^7.19.3",
+    "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.6.3"
