--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
+    "@supabase/supabase-js": "^2.4.0",
     "axios": "^1.2.3",
     "deepmerge": "^4.2.2",
     "expo": "~47.0.13",
@@ -23,11 +24,15 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.7",
+    "react-native-elements": "^3.4.3",
     "react-native-paper": "^5.1.3",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.7",
-    "zod": "^3.20.2"
+    "zod": "^3.20.2",
+    "expo-auth-session": "~3.8.0",
+    "expo-random": "~13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
