--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-web": "~0.18.7",
     "zod": "^3.20.2",
     "expo-auth-session": "~3.8.0",
-    "expo-random": "~13.0.0"
+    "expo-random": "~13.0.0",
+    "@react-native-community/datetimepicker": "6.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
