--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/datetimepicker": "6.5.2",
+    "@react-navigation/drawer": "^6.5.7",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@supabase/supabase-js": "^2.4.0",
     "axios": "^1.2.3",
     "deepmerge": "^4.2.2",
     "expo": "~47.0.13",
+    "expo-auth-session": "~3.8.0",
+    "expo-random": "~13.0.0",
     "expo-status-bar": "~1.4.2",
     "jotai": "^1.13.1",
     "nativewind": "^2.0.11",
@@ -31,9 +35,8 @@
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.7",
     "zod": "^3.20.2",
-    "expo-auth-session": "~3.8.0",
-    "expo-random": "~13.0.0",
-    "@react-native-community/datetimepicker": "6.5.2"
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-reanimated": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
