--- a/package.json
+++ b/package.json
@@ -29,14 +29,15 @@
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.7",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^5.1.3",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.7",
     "zod": "^3.20.2",
-    "react-native-gesture-handler": "~2.8.0",
-    "react-native-reanimated": "~2.12.0"
+    "@react-native-picker/picker": "2.4.8"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
