--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/datetimepicker": "6.5.2",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/drawer": "^6.5.7",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
@@ -30,14 +31,14 @@
     "react-native-dotenv": "^3.4.7",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-paper": "^5.1.3",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.7",
-    "zod": "^3.20.2",
-    "@react-native-picker/picker": "2.4.8"
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
