--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-screens": "~3.18.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-native-web": "~0.18.7",
-    "zod": "^3.20.2"
+    "zod": "^3.20.2",
+    "@react-native-community/slider": "4.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
